--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <div class="friends__section-rows">
         <div class="friends__section-row">
           <div class="friends__section-column">
+            <img src="" alt="">
             <span class="friends__section-name">LYNN</span>
           </div>
           <span class="friends__section-tagline">
