--- a/chats.html
+++ b/chats.html
@@ -41,16 +41,18 @@
     </div>
     <ul class="chats__list">
       <li class="chats__chat">
-        <div class="chat-content">
-          <img src="images/avatar.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">Lynn</h3>
-            <span class="chat__last-message">Hello! This is a test message!</span>
+        <a href="chat.html">
+          <div class="chat-content">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">Lynn</h3>
+              <span class="chat__last-message">Hello! This is a test message!</span>
+            </div>
           </div>
-        </div>
-        <span class="chat__date-time">
-          15:55
-        </span>
+          <span class="chat__date-time">
+            15:55
+          </span>
+        </a>
       </li>
       <li class="chats__chat">
         <div class="chat-content">
