--- a/chats.html
+++ b/chats.html
@@ -55,16 +55,18 @@
         </a>
       </li>
       <li class="chats__chat">
-        <div class="chat-content">
-          <img src="images/avatar.jpg">
-          <div class="chat__preview">
-            <h3 class="chat__user">KakaoTalk</h3>
-            <span class="chat__last-message">You logged into KakaoTalk PC</span>
+        <a href="chat.html">
+          <div class="chat-content">
+            <img src="images/avatar.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">KakaoTalk</h3>
+              <span class="chat__last-message">You logged into KakaoTalk PC</span>
+            </div>
           </div>
-        </div>
-        <span class="chat__date-time">
-          Jul 29
-        </span>
+          <span class="chat__date-time">
+            Jul 29
+          </span>
+        </a>
       </li>
     </ul>
 
