--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,9 @@
     </div>
     <div class="header__bottom">
       <div class="header__coulmn">
-        <i class="fa fa-chevron-left fa-lg"></i>
+        <a href="chats.html">
+          <i class="fa fa-chevron-left fa-lg"></i>
+        </a>
       </div>
       <div class="header__coulmn">
         <span class="header__text">LYNN</span>
