--- a/profile.html
+++ b/profile.html
@@ -25,13 +25,33 @@
     </div>
     <div class="header__bottom">
       <div class="header__coulmn">
-        <i class="fa fa-times fa-lg"></i>
+        <a href="index.html">
+          <i class="fa fa-times fa-lg"></i>
+        </a>
       </div>
-
       <div class="header__coulmn">
         <i class="fa fa-user fa-lg"></i>
       </div>
     </div>
   </header>
+  <main class="profile">
+    <header class="profile__header">
+      <img src="images/avatar.jpg" alt="">
+      <h3 class="profile__header-title">Nicolas</h3>
+    </header>
+    <input type="text" placeholder="maybeyoucan@gmail.com">
+    <div class="profile__action">
+      <span class="prifile__action-circle">
+        <i class="fas fa-comment fa-2x"></i>
+      </span>
+      <span class="profile__action-title">My Chatroom</span>
+    </div>
+    <div class="profile__action">
+      <span class="prifile__action-circle">
+        <i class="fas fa-pencil-alt fa-2x"></i>
+      </span>
+      <span class="profile__action-title">Edit Profile</span>
+    </div>
+  </main>
 </body>
 </html>
